force-app/main/default/objects/Projects_and_Expertise__c/Projects_and_Expertise__c.object-meta.xml
<CustomObject>
    <description>Projects and Expertise</description>
    <label>Projects and Expertise</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Projects and Expertise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects and Expertises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>