force-app/main/default/objects/Projects_and_Expertise__c/fields/ExpertiseE__c.field-meta.xml
<CustomField>
    <fullName>ExpertiseE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expertise</description>
    <inlineHelpText>Expertise</inlineHelpText>
    <label>Expertise</label>
    <referenceTo>Expertise__c</referenceTo>
    <relationshipLabel>Projects and Expertises</relationshipLabel>
    <relationshipName>Projects_and_Expertises</relationshipName>
    <type>Lookup</type>
</CustomField>