force-app/main/default/objects/Projects_and_Expertise__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project</description>
    <inlineHelpText>Project</inlineHelpText>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipLabel>Projects and Expertises</relationshipLabel>
    <relationshipName>Projects_and_Expertises</relationshipName>
    <type>Lookup</type>
</CustomField>